[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/enemies/slimeBlue_blue.png" type="Texture" id=1]
[ext_resource path="res://Assets/enemies/slimeBlue.png" type="Texture" id=2]
[ext_resource path="res://Assets/enemies/slimeBlue_squashed.png" type="Texture" id=3]
[ext_resource path="res://Data/Enemie/Enemie.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Movement",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Squash",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.4775, 13.0205 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.6051, 4.17481 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25.6047, 10 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Movement"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.01357 )
shape = SubResource( 2 )

[node name="Stick" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="Top Check" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top Check"]
position = Vector2( 0, -13.3937 )
shape = SubResource( 3 )

[node name="Side_checker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Side_checker"]
position = Vector2( 0, 6.84567 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Top Check" to="." method="_on_Top_Check_body_entered"]
[connection signal="body_entered" from="Side_checker" to="." method="_on_Side_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
